--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,10 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "GDViewer"
 version = "0.1.0"
-description = "A ZARR viewer using ImageJ."
+description = "A Globus ZARR viewer using ImageJ."
 readme = "README.md"
 authors = [
-    { name = "Your Name", email = "your.email@example.com" }
+    { name = "Alberto Mittone", email = "amittone@anl.gov" }
 ]
 dependencies = [
     "imagej",
